# Analyzing-Transport-Emissions-from-Object-Centric-Event-Logs

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
data/: Evaluation_figures_script.py
data/Kodak+Eval/: closest_100_bus_stops_common_route_type.csv  closest_100_bus_stops_common_route_type_trip_stop_sequences.csv  closest_100_bus_stops_with_route_type.csv  closest_100_bus_stops_with_route_type_trip_stop_sequences.csv  closest_50_bus_stops_common_route_type.csv  closest_50_bus_stops_with_route_type.csv  closest_bus_stops.csv  closest_bus_stops_common_route_type.csv  closest_bus_stops_ignore_same_parent.csv  closest_bus_stops_ignore_same_parent_with_route_type.csv  consecutive_trip_last_to_first_stop_sequence_transition_distance_summary_2026_05_04_distance_change_rule.csv  consecutive_trip_last_to_first_stop_sequence_transition_distance_summary_2026_05_04_threshold_75m.csv  consecutive_trip_last_to_first_stop_sequence_transition_distances_2026_05_04_distance_change_rule.csv  consecutive_trip_last_to_first_stop_sequence_transition_distances_2026_05_04_threshold_75m.csv  find_closest_bus_stops.py  same_stop_name_position_spread_2026_05_04.csv
data/code/: Emission_Calculation.py  apply_specific_pair_suffix_rules.py  aux_event_comparison.py  build_original_high_spread_aux_event_log.py  split_green_trip_paths_by_neighbors.py
data/h5_eval/: analyze_last_to_first_stop_sequence_transitions.py  analyze_trip_change_waiting_times.py  h5_last_to_first_stop_sequence_transition_distance_summary_2026_05_04_distance_change_rule.csv  (+10 more)
src/backend/: KODA.py  (+5 more)
(+55 files in other folders)
