[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "koda-pipeline"
version = "0.1.0"
description = "Local KODA data retrieval, preprocessing, and OCEL event log pipeline."
requires-python = ">=3.11"
dependencies = [
    "certifi>=2026.5.20",
    "gtfs-realtime-bindings>=2.0.0",
    "matplotlib>=3.10.0",
    "pandas>=3.0.0",
    "protobuf>=7.0.0",
    "tabulate>=0.10.0",
]

[project.scripts]
koda-pipeline = "backend.koda_pipeline_server:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["backend*"]
